refactor: clean up Principal handling and remove anti-patterns